Prueba index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <header class="hero-container">
         <nav class="top-nav">
             <a href="#"><img src="./imgs/logo.svg" alt="Camping logo"></a>
+            <!-- mobile nav btn -->
+            <input class="mobile-check" type="checkbox">
+            <label class="mobile-btn">
+                <span></span>
+            </label>
+            <!-- mobile nav btn -->
             <ul class="nav-list">
                 <li><a class="nav-list-link" href="#">Home</a></li>
                 <li><a class="nav-list-link" href="#">Destination</a></li>
@@ -63,9 +69,8 @@
         <section class="destinations-container">
             <img src="./imgs/icons/destinations.svg" alt="Explore Destinations & Activities">
             <h2 class="destinations-title">Explore Destinations & Activities</h2>
+
             <div class="activities-container">
-
-
                 <section class="activity">
                     <div class="activity-thumb">
                         <img class="activity-image" src="./imgs/trickle-creek-ranch.webp" alt="Trickle Creek Ranch">
